--- a/_config.yml
+++ b/_config.yml
@@ -3,13 +3,13 @@ permalink: /:title/
 url: http://xuezhiyuanlin.github.io
 name: xuezhiyuanlin
 author: xuezhiyuanlin
-qq: 
-email: 
+qq: 317789135 
+email: xuezhiyuanlin@163.com
 duoshuo: 
 cnzz: 
-weibo: 
-github: Yonsm
+weibo: 2418621275
+github: xuezhiyuanlin
 pygments: true
 safe: true
 paginate: 20
-about: ""
+about: "这是本人的第一个博客，大家来捧场！！！"
